--- a/html/my_laboratory_picture_two.html
+++ b/html/my_laboratory_picture_two.html
@@ -57,7 +57,7 @@
   <div class="half">
     <a href="">
       <img class="pl_img_my" src="images/PNG/onion.png">
-      <p class="after-pict">Лук репатый</p>
+      <p class="after-pict">Лук репчатый</p>
     </a>
   </div>
 </div>
