добавлен массив для систем для list.php.

--- a/html/my_laboratory_two.html
+++ b/html/my_laboratory_two.html
@@ -58,21 +58,33 @@
 </div>
 <div class="system_gid">
     <p class="header_system">Выбетире систему!</p>
-    <div class="arrow_continue3">
-        <a href="my_laboratory_two.html">
-            <div class="arrow-left"></div>
+    <div class="continue">
+        <a href="">
+            <img class="pl_img_my_system" src="images/templates/fit_syst.png">
+            <p class="after-pict_system">Фитильная система</p>
         </a>
     </div>
-    <div class="continue5">
+    <div class="continue2">
         <a href="">
-            <img class="pl_img_my_system" src="images/templates/technica_pit_sl.png">
-            <p class="after-pict_system">Техника питательного слоя</p>
+            <img class="pl_img_my_system" src="images/templates/sist_gl_kyl.png">
+            <p class="after-pict_system">Система глубоководых культур</p>
         </a>
     </div>
-    <div class="continue5">
+    <div class="continue">
         <a href="">
-            <img class="pl_img_my_system" src="images/templates/aeroponica.png">
-            <p class="after-pict_system">Аэропоника</p>
+            <img class="pl_img_my_system" src="images/templates/syst_cap_pol.png">
+            <p class="after-pict_system">Система капельного полива</p>
+        </a>
+    </div>
+    <div class="continue">
+        <a href="">
+            <img class="pl_img_my_system" src="images/templates/syst_per_zat.png">
+            <p class="after-pict_system">Система периодического затопления</p>
+        </a>
+    </div>
+    <div class="arrow_continue">
+        <a href="my_laboratory_three.html">
+            <div class="arrow-right"></div>
         </a>
     </div>
 </div>
