--- a/html/my_laboratory_two.html
+++ b/html/my_laboratory_two.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Гидропоника — это способ выращивания растений на искусственных средах без почвы. Питание растения получают из питательного раствора.">
     <meta name="keywords" content="гидропоника, лаборатория, цифровая лаборатория, лаборатория гидропоники ">
     <title>Лаборатория гидропоники</title>
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -66,7 +66,7 @@
     </div>
     <div class="continue2">
         <a href="">
-            <img class="pl_img_my_system" src="images/templates/sist_gl_kyl.png">
+            <img class="pl_img_my_system" src="images/templates/syst_gl_kyl.png">
             <p class="after-pict_system">Система глубоководых культур</p>
         </a>
     </div>
