--- a/html/my_laboratory.html
+++ b/html/my_laboratory.html
@@ -5,7 +5,7 @@
     <meta name="description" content="Гидропоника — это способ выращивания растений на искусственных средах без почвы. Питание растения получают из питательного раствора.">
     <meta name="keywords" content="гидропоника, лаборатория, цифровая лаборатория, лаборатория гидропоники ">
     <title>Лаборатория гидропоники</title>
-    <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
